set test covered ratio back to 6.0, add missing to-be-committed file